Instapost - scrollbar fix

--- a/InstaPost/styles.css
+++ b/InstaPost/styles.css
@@ -89,6 +89,12 @@ strong {
 .post-comments {
     height: 375px;
     overflow: scroll;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+.post-comments::-webkit-scrollbar {
+    display: none;
 }
 
 .description {
